issue: fix the bottom border position and size on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -159,12 +159,15 @@ h1 span {
     border-bottom: 4px solid var(--dark);
     /* border-bottom: 4px solid var(--yellow); */
     margin-bottom: 4rem;
+    position: relative;
+    justify-content: center;
 }
 .section-header h2 {
     width: max-content;
     background-color: white;
-    position: relative;
-    bottom: -2rem;
+    position: apsolute;
+    z-index: 1;
+    transform: translate(0, 50%);
 }
 
 /* ------- Cards ------- */
